--- a/.env
+++ b/.env
@@ -1,14 +1,12 @@
 # Telegram Bot Configuration
-BOT_TOKEN="8320016268:AAGTdD3K_IMovwZAfkzG8Z_mgEU2iKy4rjQ"
+TELEGRAM_BOT_TOKEN="8320016268:AAGTdD3K_IMovwZAfkzG8Z_mgEU2iKy4rjQ"
 
-# Database Configuration
-# DATABASE_URL=sqlite:///bot.db
 
-# OpenAI API Configuration (для будущего использования)
-# OPENAI_API_KEY=your_openai_api_key_here
+# Ollama Configuration
+OLLAMA_BASE_URL=http://localhost:11434
+OLLAMA_MODEL=llama3.2:3b
 
-# Logging Configuration
-# LOG_LEVEL=INFO
 
-# Development Settings
-# DEBUG=True
+# Agent Configuration
+MODERATOR_AGENT_NAME=ModeratorAgent
+MODERATOR_AGENT_ROLE="Ты дружелюбный модератор образовательного бота"
