new life of the project

--- a/.env
+++ b/.env
@@ -1,12 +1,10 @@
-# Telegram Bot Configuration
-TELEGRAM_BOT_TOKEN="8320016268:AAGTdD3K_IMovwZAfkzG8Z_mgEU2iKy4rjQ"
+# GigaChat Credentials (Личные данные)
+GIGACHAT_CLIENT_ID="019a2c08-c204-74b7-b856-3fab2ef933ef"
+GIGACHAT_CLIENT_SECRET="1fdd2d9a-03c8-4903-b1fd-3a499e177c1d"
+GIGACHAT_MODEL=GigaChat
 
+# Telegram Bot
+TELEGRAM_BOT_TOKEN=8320016268:AAGTdD3K_IMovwZAfkzG8Z_mgEU2iKy4rjQ
 
-# Ollama Configuration
-OLLAMA_BASE_URL=http://localhost:11434
-OLLAMA_MODEL=llama3.2:3b
-
-
-# Agent Configuration
-MODERATOR_AGENT_NAME=ModeratorAgent
-MODERATOR_AGENT_ROLE="Ты дружелюбный модератор образовательного бота"
+# Debug Mode
+DEBUG=False
